tests/baselines/reference/unusedInterfaceinNamespace1.errors.txt
unusedInterfaceinNamespace1.ts(2,15): error TS6196: 'i1' is declared but never used.


==== unusedInterfaceinNamespace1.ts (1 errors) ====
    namespace Validation {
        interface i1 {
                  ~~
!!! error TS6196: 'i1' is declared but never used.
    
        }
    }